Package_Tools/include-C/mgl2/c/in_arbeit/fertig/data_cf.pp


function mgl_data_flame_2d(A:THCDT; F:THCDT; n:longint; skip:longint):THMDT;cdecl;external;
function mgl_data_detect(d:THCDT; lvl:Tmreal; dj:Tmreal; di:Tmreal; min_len:Tmreal):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_tridmat(A:THCDT; B:THCDT; C:THCDT; D:THCDT; how:Pchar):THMDT;cdecl;external;
function mgl_data_value(dat:THMDT; i:longint; j:longint; k:longint):Pmreal;cdecl;external;
function mgl_data_data(dat:THMDT):Pmreal;cdecl;external;
function mgl_data_get_nx(d:THCDT):longint;cdecl;external;
function mgl_data_get_ny(d:THCDT):longint;cdecl;external;
function mgl_data_get_nz(d:THCDT):longint;cdecl;external;
function mgl_data_combine(dat1:THCDT; dat2:THCDT):THMDT;cdecl;external;
procedure mgl_data_extend(dat:THMDT; n1:longint; n2:longint);cdecl;external;
procedure mgl_data_insert(dat:THMDT; dir:char; at:longint; num:longint);cdecl;external;
procedure mgl_data_delete(dat:THMDT; dir:char; at:longint; num:longint);cdecl;external;
procedure mgl_data_join(dat:THMDT; d:THCDT);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_smooth(d:THMDT; dirs:Pchar; delta:Tmreal);cdecl;external;
(* Const before type ignored *)
function mgl_data_sum(dat:THCDT; dir:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_first_dir(dat:THCDT; dir:Pchar; val:Tdouble):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_last_dir(dat:THCDT; dir:Pchar; val:Tdouble):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_max_dir(dat:THCDT; dir:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_min_dir(dat:THCDT; dir:Pchar):THMDT;cdecl;external;
function mgl_data_minmax(dat:THCDT):THMDT;cdecl;external;
function mgl_data_connect(a:THCDT; b:THCDT):THMDT;cdecl;external;
procedure mgl_data_connect_r(a:THMDT; b:THMDT);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_cumsum(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_integral(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_diff(dat:THMDT; dir:Pchar);cdecl;external;
procedure mgl_data_diff_par(dat:THMDT; v1:THCDT; v2:THCDT; v3:THCDT);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_diff2(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_swap(dat:THMDT; dir:Pchar);cdecl;external;
procedure mgl_data_roll(dat:THMDT; dir:char; num:longint);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_mirror(dat:THMDT; dir:Pchar);cdecl;external;
procedure mgl_data_sort(dat:THMDT; idx:longint; idy:longint);cdecl;external;
procedure mgl_data_dilate(dat:THMDT; val:Tmreal; step:longint);cdecl;external;
procedure mgl_data_erode(dat:THMDT; val:Tmreal; step:longint);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_hankel(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_sinfft(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_cosfft(dat:THMDT; dir:Pchar);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_fill_sample(dat:THMDT; how:Pchar);cdecl;external;
(* Const before type ignored *)
function mgl_data_correl(dat1:THCDT; dat2:THCDT; dir:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
procedure mgl_data_wavelet(dat:THMDT; how:Pchar; k:longint);cdecl;external;
function mgl_fft_alloc(n:longint; space:Ppointer; nthr:longint):pointer;cdecl;external;
function mgl_fft_alloc_thr(n:longint):pointer;cdecl;external;
procedure mgl_fft_free(wt:pointer; ws:Ppointer; nthr:longint);cdecl;external;
procedure mgl_fft_free_thr(wt:pointer);cdecl;external;
(* Const before type ignored *)
procedure mgl_fft(x:Pdouble; s:longint; n:longint; wt:pointer; ws:pointer; 
            inv:longint);cdecl;external;
procedure mgl_clear_fft;cdecl;external;
function mgl_data_spline(dat:THCDT; x:Tmreal; y:Tmreal; z:Tmreal):Tmreal;cdecl;external;
function mgl_data_spline_ext(dat:THCDT; x:Tmreal; y:Tmreal; z:Tmreal; dx:Pmreal; 
           dy:Pmreal; dz:Pmreal):Tmreal;cdecl;external;
function mgl_gspline_init(x:THCDT; v:THCDT):THMDT;cdecl;external;
function mgl_gspline(coef:THCDT; dx:Tmreal; d1:Pmreal; d2:Pmreal):Tmreal;cdecl;external;
function mgl_data_solve_1d(dat:THCDT; val:Tmreal; spl:longint; i0:longint):Tmreal;cdecl;external;
function mgl_data_solve(dat:THCDT; val:Tmreal; dir:char; i0:THCDT; norm:longint):THMDT;cdecl;external;
function mgl_data_trace(d:THCDT):THMDT;cdecl;external;
function mgl_data_resize(dat:THCDT; mx:longint; my:longint; mz:longint):THMDT;cdecl;external;
function mgl_data_resize_box(dat:THCDT; mx:longint; my:longint; mz:longint; x1:Tmreal; 
           x2:Tmreal; y1:Tmreal; y2:Tmreal; z1:Tmreal; z2:Tmreal):THMDT;cdecl;external;
function mgl_data_hist(dat:THCDT; n:longint; v1:Tmreal; v2:Tmreal; nsub:longint):THMDT;cdecl;external;
function mgl_data_hist_w(dat:THCDT; weight:THCDT; n:longint; v1:Tmreal; v2:Tmreal; 
           nsub:longint):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_data_momentum(dat:THCDT; dir:char; how:Pchar):THMDT;cdecl;external;
function mgl_data_pulse(dat:THCDT; dir:char):THMDT;cdecl;external;
function mgl_data_evaluate(dat:THCDT; idat:THCDT; jdat:THCDT; kdat:THCDT; norm:longint):THMDT;cdecl;external;
procedure mgl_data_envelop(dat:THMDT; dir:char);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_sew(dat:THMDT; dirs:Pchar; da:Tmreal);cdecl;external;
procedure mgl_data_crop(dat:THMDT; n1:longint; n2:longint; dir:char);cdecl;external;
(* Const before type ignored *)
procedure mgl_data_crop_opt(dat:THMDT; how:Pchar);cdecl;external;
procedure mgl_data_clean(dat:THMDT; id:longint);cdecl;external;
procedure mgl_data_mul_dat(dat:THMDT; d:THCDT);cdecl;external;
procedure mgl_data_div_dat(dat:THMDT; d:THCDT);cdecl;external;
procedure mgl_data_add_dat(dat:THMDT; d:THCDT);cdecl;external;
procedure mgl_data_sub_dat(dat:THMDT; d:THCDT);cdecl;external;
procedure mgl_data_mul_num(dat:THMDT; d:Tmreal);cdecl;external;
procedure mgl_data_div_num(dat:THMDT; d:Tmreal);cdecl;external;
procedure mgl_data_add_num(dat:THMDT; d:Tmreal);cdecl;external;
procedure mgl_data_sub_num(dat:THMDT; d:Tmreal);cdecl;external;
(* Const before type ignored *)
function mgl_transform_a(am:THCDT; ph:THCDT; tr:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_transform(re:THCDT; im:THCDT; tr:Pchar):THMDT;cdecl;external;
(* Const before type ignored *)
procedure mgl_data_fourier(re:THMDT; im:THMDT; dir:Pchar);cdecl;external;
function mgl_data_stfa(re:THCDT; im:THCDT; dn:longint; dir:char):THMDT;cdecl;external;
function mgl_triangulation_3d(x:THCDT; y:THCDT; z:THCDT):THMDT;cdecl;external;
function mgl_triangulation_2d(x:THCDT; y:THCDT):THMDT;cdecl;external;
function mgl_find_root(func:function (val:Tmreal; par:pointer):Tmreal; ini:Tmreal; par:pointer):Tmreal;cdecl;external;
(* Const before type ignored *)
function mgl_find_root_txt(func:Pchar; ini:Tmreal; var_id:char):Tmreal;cdecl;external;
(* Const before type ignored *)
function mgl_data_roots(func:Pchar; ini:THCDT; var_id:char):THMDT;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function mgl_find_roots_txt(func:Pchar; vars:Pchar; ini:THCDT):THMDT;cdecl;external;
(* Const before type ignored *)
function mgl_find_roots(n:Tsize_t; func:procedure (x:Pmreal; f:Pmreal; par:pointer); x0:Pmreal; par:pointer):longint;cdecl;external;
function mgl_rnd_integer(lo:longint; hi:longint):Tmreal;cdecl;external;
function mgl_rnd_uniform(lo:Tmreal; hi:Tmreal):Tmreal;cdecl;external;
function mgl_rnd_bernoulli(p:Tmreal):Tmreal;cdecl;external;
function mgl_rnd_binomial(trials:longint; p:Tmreal):longint;cdecl;external;
function mgl_rnd_gaussian(mu:Tmreal; sigma:Tmreal):Tmreal;cdecl;external;
function mgl_rnd_exponential(lambda:Tmreal):Tmreal;cdecl;external;
function mgl_rnd_discrete(A:THCDT):longint;cdecl;external;
procedure mgl_data_rnd_integer(d:THMDT; lo:longint; hi:longint);cdecl;external;
procedure mgl_data_rnd_uniform(d:THMDT; lo:Tmreal; hi:Tmreal);cdecl;external;
procedure mgl_data_rnd_bernoulli(d:THMDT; p:Tmreal);cdecl;external;
procedure mgl_data_rnd_binomial(d:THMDT; trials:longint; p:Tmreal);cdecl;external;
procedure mgl_data_rnd_gaussian(d:THMDT; mu:Tmreal; sigma:Tmreal);cdecl;external;
procedure mgl_data_rnd_exponential(d:THMDT; lambda:Tmreal);cdecl;external;
procedure mgl_data_rnd_discrete(d:THMDT; A:THCDT);cdecl;external;
procedure mgl_shuffle(d:THMDT; dir:char);cdecl;external;
procedure mgl_data_brownian(d:THMDT; y1:Tmreal; y2:Tmreal; sigma:Tmreal; alpha:Tmreal);cdecl;external;
procedure mgl_data_brownian_(d:Puintptr_t; y1:Pdouble; y2:Pdouble; sigma:Pdouble; alpha:Pdouble);cdecl;external;

implementation


end.
